--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,6 +86,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section styles */
 .about{
@@ -101,6 +104,29 @@ main{
 .about-info{
     text-align: center;
 }
+/* skills related styles */
 #what-i-do-description{
     padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFFF;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0,0.06);
+
+}
+.skill-description{
+   color: #757575;
+}
+/* Resume Section Styles */
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
